--- a/LISy/LISy/BookInfoWindow.xaml
+++ b/LISy/LISy/BookInfoWindow.xaml
@@ -16,7 +16,7 @@
         <Label x:Name="BestSellerLabel" Content="" Margin="115,80,0,0" VerticalAlignment="Top" RenderTransformOrigin="-1.14,-0.026" Height="30" Foreground="White" FontSize="16" HorizontalAlignment="Left" Width="393"/>
         <Label x:Name="InStockLabel" Content="" Margin="115,115,0,0" VerticalAlignment="Top" RenderTransformOrigin="-1.14,-0.026" Height="30" Foreground="White" FontSize="16" HorizontalAlignment="Left" Width="393"/>
         <Label x:Name="ReturnDataLabel" Content="" HorizontalAlignment="Left" Margin="115,145,0,0" VerticalAlignment="Top" Width="176" Foreground="White" Height="30" FontSize="16" />
-        <Image x:Name="imagesourse" HorizontalAlignment="Left" Height="100" Margin="10,10,0,0" VerticalAlignment="Top" Width="97"/>
+        <Image x:Name="imagesourse" HorizontalAlignment="Left" Height="100" Margin="10,10,0,0" VerticalAlignment="Top" Width="97" Stretch="Fill"/>
         <Button x:Name="GoToQueue" Content="Go to queue" HorizontalAlignment="Left" Margin="10,150,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="15" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Click="GoToQueue_Click"/>
         <Label x:Name="FineLabel" Content="Fine:" HorizontalAlignment="Left" Margin="296,145,0,0" VerticalAlignment="Top" Width="50" Height="30" Foreground="White" FontSize="14" Visibility="Hidden"/>
         <Label x:Name="finePriceLabel" Content="" HorizontalAlignment="Left" Margin="351,145,0,0" VerticalAlignment="Top" Width="157" Height="30" FontSize="14" Foreground="White" Visibility="Hidden"/>
