--- a/LISy/LISy/UserModifyWindow.xaml
+++ b/LISy/LISy/UserModifyWindow.xaml
@@ -5,23 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LISy"
         mc:Ignorable="d"
-        Title="User modify" Height="261.328" Width="872.085" Icon="Design/icon_logo100x100.ico" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="User modify" Height="435.328" Width="390.585" Icon="Design/icon_logo100x100.ico" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+    <Window.Background>
+        <ImageBrush ImageSource="Design/books_shelf_back.jpg"/>
+    </Window.Background>
     <Grid>
         <TextBox x:Name="FirstName" HorizontalAlignment="Left" Height="23" Margin="10,10,0,0" TextWrapping="Wrap" Text="First name" VerticalAlignment="Top" Width="360" RenderTransformOrigin="0.415,0.265" Grid.ColumnSpan="2" TextChanged="FirstName_TextChanged"/>
         <TextBox x:Name="SecondName" HorizontalAlignment="Left" Height="23" Margin="10,38,0,0" TextWrapping="Wrap" Text="Second name" VerticalAlignment="Top" Width="360" Grid.ColumnSpan="2" TextChanged="SecondName_TextChanged"/>
         <TextBox x:Name="Phone" HorizontalAlignment="Left" Height="23" Margin="10,66,0,0" TextWrapping="Wrap" Text="Phone" VerticalAlignment="Top" Width="360" Grid.ColumnSpan="2" TextChanged="Phone_TextChanged"/>
         <TextBox x:Name="Address" HorizontalAlignment="Left" Height="23" Margin="10,94,0,0" TextWrapping="Wrap" Text="Address" VerticalAlignment="Top" Width="360" Grid.ColumnSpan="2" TextChanged="Address_TextChanged"/>
-        <Button x:Name="Enter" Content="Save" HorizontalAlignment="Left" Margin="90,149,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="Enter_Click" Grid.ColumnSpan="2"/>
-        <Button x:Name="Cancel" Content="Cancel" HorizontalAlignment="Left" Margin="10,149,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="Cancel_Click"/>
-        <Button x:Name="Delete" Content="Delete" Grid.Column="1" HorizontalAlignment="Left" Margin="174,149,0,0" VerticalAlignment="Top" Width="75" Click="Delete_Click"/>
-        <ComboBox HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2" Margin="10,122,0,0">
-            <CheckBox x:Name="librarianCheckBoxType" Content ="Librarian"/>
+        <Button x:Name="Enter" Content="Save" HorizontalAlignment="Left" Margin="90,149,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="Enter_Click" Grid.ColumnSpan="2" BorderBrush="White" Background="{x:Null}" Foreground="White"/>
+        <Button x:Name="Cancel" Content="Cancel" HorizontalAlignment="Left" Margin="10,149,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="Cancel_Click" Background="{x:Null}" Foreground="White" BorderBrush="White"/>
+        <Button x:Name="Delete" Content="Delete" Grid.Column="1" HorizontalAlignment="Left" Margin="174,149,0,0" VerticalAlignment="Top" Width="75" Click="Delete_Click" Background="{x:Null}" BorderBrush="White" Foreground="White"/>
+        <ComboBox x:Name="statusItem" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2" Margin="10,122,0,0">
             <CheckBox x:Name="studentCheckBoxType" Content="Student"/>
             <CheckBox x:Name="taCheckBoxType" Content="TA"/>
             <CheckBox x:Name="InstructorCheckBoxType" Content="Instructor"/>
             <CheckBox x:Name="professorCheckBoxType" Content="Professor"/>
             <CheckBox x:Name="visitingProfessorCheckBoxType" Content="Visiting Professor"/>
         </ComboBox>
-        <DataGrid x:Name="UsersNotificationDataGrid" HorizontalAlignment="Left" Height="212" Margin="375,10,0,0" VerticalAlignment="Top" Width="481" Loaded="UsersNotificationDataGrid_Loaded"/>
+        <DataGrid x:Name="UsersNotificationDataGrid" HorizontalAlignment="Left" Height="212" Margin="10,174,0,0" VerticalAlignment="Top" Width="360" Loaded="UsersNotificationDataGrid_Loaded"/>
     </Grid>
 </Window>
