--- a/LISy/LISy/ModifyJournal.xaml
+++ b/LISy/LISy/ModifyJournal.xaml
@@ -7,30 +7,33 @@
         mc:Ignorable="d"
         Title="ModifyJournal" Height="508.241" Width="592.986"
         Name="ModifyWindow" Icon="Design/icon_logo100x100.ico" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+    <Window.Background>
+        <ImageBrush ImageSource="Design/books_shelf_back.jpg"/>
+    </Window.Background>
     <Grid x:Name="mainGrid">
-        <Label x:Name="titleLabel" Content="Title:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="80" FontSize="15"/>
+        <Label x:Name="titleLabel" Content="Title:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="80" FontSize="15" Foreground="White"/>
         <TextBox x:Name="titleTextBox" HorizontalAlignment="Left" Height="30" Margin="95,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="481" FontSize="15" TextChanged="titleTextBox_TextChanged"/>
-        <Label x:Name="publisherLabel" Content="Publisher:" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Width="80" Height="30" FontSize="15"/>
+        <Label x:Name="publisherLabel" Content="Publisher:" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Width="80" Height="30" FontSize="15" Foreground="White"/>
         <TextBox x:Name="publisherTextBox" HorizontalAlignment="Left" Height="30" Margin="95,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="481" FontSize="15" TextChanged="publisherTextBox_TextChanged"/>
-        <Label x:Name="issueLabel" Content="Issue:" HorizontalAlignment="Left" Margin="10,80,0,0" VerticalAlignment="Top" Width="80" Height="30" FontSize="15"/>
+        <Label x:Name="issueLabel" Content="Issue:" HorizontalAlignment="Left" Margin="10,80,0,0" VerticalAlignment="Top" Width="80" Height="30" FontSize="15" Foreground="White"/>
         <TextBox x:Name="issueTextBox" HorizontalAlignment="Left" Height="30" Margin="95,81,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="481" FontSize="15" TextChanged="issueTextBox_TextChanged"/>
-        <Label x:Name="editorsLabel" Content="Editors:" HorizontalAlignment="Left" Margin="10,116,0,0" VerticalAlignment="Top" Width="80" Height="30" FontSize="15"/>
+        <Label x:Name="editorsLabel" Content="Editors:" HorizontalAlignment="Left" Margin="10,116,0,0" VerticalAlignment="Top" Width="80" Height="30" FontSize="15" Foreground="White"/>
         <TextBox x:Name="editorsTextBox" HorizontalAlignment="Left" Height="30" Margin="95,116,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="481" FontSize="15" TextChanged="editorsTextBox_TextChanged"/>
-        <Label x:Name="keyWordsLabel" Content="KeyWords:" HorizontalAlignment="Left" Margin="10,151,0,0" VerticalAlignment="Top" Width="80" Height="30" FontSize="15"/>
+        <Label x:Name="keyWordsLabel" Content="KeyWords:" HorizontalAlignment="Left" Margin="10,151,0,0" VerticalAlignment="Top" Width="80" Height="30" FontSize="15" Foreground="White"/>
         <TextBox x:Name="keyWordsTextBox" HorizontalAlignment="Left" Height="30" Margin="95,151,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="481" FontSize="15" TextChanged="keyWordsTextBox_TextChanged"/>
-        <Label x:Name="coverUrlLabel" Content="CoverURL:" HorizontalAlignment="Left" Margin="10,186,0,0" VerticalAlignment="Top" Width="80" FontSize="15"/>
+        <Label x:Name="coverUrlLabel" Content="CoverURL:" HorizontalAlignment="Left" Margin="10,186,0,0" VerticalAlignment="Top" Width="80" FontSize="15" Foreground="White"/>
         <TextBox x:Name="coverUrlTextBox" HorizontalAlignment="Left" Height="30" Margin="95,186,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="481" FontSize="15" TextChanged="coverUrlTextBox_TextChanged"/>
-        <Label x:Name="priceLabel" Content="Price:" HorizontalAlignment="Left" Margin="10,221,0,0" VerticalAlignment="Top" Width="80" Height="30" FontSize="15"/>
+        <Label x:Name="priceLabel" Content="Price:" HorizontalAlignment="Left" Margin="10,221,0,0" VerticalAlignment="Top" Width="80" Height="30" FontSize="15" Foreground="White"/>
         <TextBox x:Name="priceTextBox" HorizontalAlignment="Left" Height="30" Margin="95,221,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="481" FontSize="15" TextChanged="priceTextBox_TextChanged"/>
-        <Label x:Name="publicationDateLabel" Content="Publication Date:" HorizontalAlignment="Left" Margin="10,256,0,0" VerticalAlignment="Top" Width="125" Height="30" FontSize="15"/>
+        <Label x:Name="publicationDateLabel" Content="Publication Date:" HorizontalAlignment="Left" Margin="10,256,0,0" VerticalAlignment="Top" Width="125" Height="30" FontSize="15" Foreground="White"/>
         <TextBox x:Name="publicationDateBox" HorizontalAlignment="Left" Height="30" Margin="140,256,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="436" FontSize="15" TextChanged="publicationDateBox_TextChanged"/>
-        <Label x:Name="copiesOfJournalLabel" Content="Copies Of Journal:" HorizontalAlignment="Left" Margin="10,291,0,0" VerticalAlignment="Top" Width="80" Height="30" FontSize="15"/>
+        <Label x:Name="copiesOfJournalLabel" Content="Copies Of Journal:" HorizontalAlignment="Left" Margin="10,291,0,0" VerticalAlignment="Top" Width="80" Height="30" FontSize="15" Foreground="White"/>
         <TextBox x:Name="copiesOfJournalTextBox" HorizontalAlignment="Left" Height="30" Margin="95,291,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="481" FontSize="15" TextChanged="copiesOfJournalTextBox_TextChanged"/>
-        <Button x:Name="saveButton" Content="Save" HorizontalAlignment="Left" Margin="501,396,0,0" VerticalAlignment="Top" Width="75" Height="30" Click="saveButton_Click"/>
-        <Button x:Name="deleteButton" Content="Delete" HorizontalAlignment="Left" Margin="421,396,0,0" VerticalAlignment="Top" Width="75" Height="30" Click="deleteButton_Click"/>
-        <Label x:Name="roomLabel" Content="Room:" HorizontalAlignment="Left" Margin="10,326,0,0" VerticalAlignment="Top" Width="80" Height="30" FontSize="15"/>
+        <Button x:Name="saveButton" Content="Save" HorizontalAlignment="Left" Margin="501,396,0,0" VerticalAlignment="Top" Width="75" Height="30" Click="saveButton_Click" BorderBrush="White" Foreground="White" Background="{x:Null}"/>
+        <Button x:Name="deleteButton" Content="Delete" HorizontalAlignment="Left" Margin="421,396,0,0" VerticalAlignment="Top" Width="75" Height="30" Click="deleteButton_Click" Background="{x:Null}" BorderBrush="White" Foreground="White"/>
+        <Label x:Name="roomLabel" Content="Room:" HorizontalAlignment="Left" Margin="10,326,0,0" VerticalAlignment="Top" Width="80" Height="30" FontSize="15" Foreground="White"/>
         <TextBox x:Name="roomTextBox" HorizontalAlignment="Left" Height="30" Margin="95,326,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="481" FontSize="15" TextChanged="roomTextBox_TextChanged" />
-        <Label x:Name="levelLabel" Content="Level:" HorizontalAlignment="Left" Margin="10,361,0,0" VerticalAlignment="Top" Width="80" Height="30" FontSize="15"/>
+        <Label x:Name="levelLabel" Content="Level:" HorizontalAlignment="Left" Margin="10,361,0,0" VerticalAlignment="Top" Width="80" Height="30" FontSize="15" Foreground="White"/>
         <TextBox x:Name="levelTextBox" HorizontalAlignment="Left" Height="30" Margin="95,361,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="481" FontSize="15" TextChanged="levelTextBox_TextChanged" />
     </Grid>
 </Window>
